--- a/test/ssl-tests/02-protocol-version.cnf.in
+++ b/test/ssl-tests/02-protocol-version.cnf.in
@@ -16,4 +16,9 @@ use warnings;
 
 use protocol_version;
 
-our @tests = generate_version_tests("TLS");
+our @tests;
+if (FIPS_MODE) {
+    @tests = generate_version_tests("TLS", 1);
+} else {
+    @tests = generate_version_tests("TLS", 0);
+}
