--- a/test/ssl-tests/07-dtls-protocol-version.cnf.in
+++ b/test/ssl-tests/07-dtls-protocol-version.cnf.in
@@ -16,4 +16,9 @@ use warnings;
 
 use protocol_version;
 
-our @tests = generate_version_tests("DTLS");
+our @tests;
+if (FIPS_MODE) {
+    @tests = generate_version_tests("DTLS", 1);
+} else {
+    @tests = generate_version_tests("DTLS", 0);
+}
