--- a/oqs-template/generate.yml
+++ b/oqs-template/generate.yml
@@ -179,49 +179,103 @@ kems:
     nid_hybrid_p256: "0x0322"
     oqs_alg: "OQS_KEM_alg_sike_p751"
     bit_security: 256
-kem_nid_end: "0x0224"
-kem_nid_hybrid_end: "0x0324"
-unused_kems:
   -
     name_group: "ledacryptkemlt12"
-    nid: "0x0223"
-    nid_hybrid_p256: "0x0323"
-    oqs_alg: "OQS_KEM_alg_ledacrypt_kem_lt_12"
+    nid: "0x0225"
+    nid_hybrid_p256: "0x0325"
+    oqs_alg: "OQS_KEM_alg_ledacrypt_ledakemlt12"
     bit_security: 128
   -
     name_group: "ledacryptkemlt32"
-    nid: "0x0224"
-    nid_hybrid_p256: "0x0324"
-    oqs_alg: "OQS_KEM_alg_ledacrypt_kem_lt_32"
+    nid: "0x0226"
+    nid_hybrid_p256: "0x0326"
+    oqs_alg: "OQS_KEM_alg_ledacrypt_ledakemlt32"
     bit_security: 192
   -
     name_group: "ledacryptkemlt52"
-    nid: "0x0225"
-    nid_hybrid_p256: "0x0325"
-    oqs_alg: "OQS_KEM_alg_ledacrypt_kem_lt_52"
+    nid: "0x0227"
+    nid_hybrid_p256: "0x0327"
+    oqs_alg: "OQS_KEM_alg_ledacrypt_ledakemlt52"
     bit_security: 256
   -
+    name_group: "kyber90s512"
+    nid: "0x022C"
+    nid_hybrid_p256: "0x032C"
+    oqs_alg: "OQS_KEM_alg_kyber_512_90s"
+    bit_security: 128
+  -
+    name_group: "kyber90s768"
+    nid: "0x022D"
+    nid_hybrid_p256: "0x032D"
+    oqs_alg: "OQS_KEM_alg_kyber_768_90s"
+    bit_security: 192
+  -
+    name_group: "kyber90s1024"
+    nid: "0x022E"
+    nid_hybrid_p256: "0x032E"
+    oqs_alg: "OQS_KEM_alg_kyber_1024_90s"
+    bit_security: 256
+  -
+    name_group: "babybear"
+    nid: "0x0230"
+    nid_hybrid_p256: "0x0330"
+    oqs_alg: "OQS_KEM_alg_threebears_babybear"
+    bit_security: 128
+  -
+    name_group: "mamabear"
+    nid: "0x0231"
+    nid_hybrid_p256: "0x0331"
+    oqs_alg: "OQS_KEM_alg_threebears_mamabear"
+    bit_security: 192
+  -
+    name_group: "papabear"
+    nid: "0x0232"
+    nid_hybrid_p256: "0x0332"
+    oqs_alg: "OQS_KEM_alg_threebears_papabear"
+    bit_security: 256
+  -
+    name_group: "babybearephem"
+    nid: "0x0233"
+    nid_hybrid_p256: "0x0333"
+    oqs_alg: "OQS_KEM_alg_threebears_babybear_ephem"
+    bit_security: 128
+  -
+    name_group: "mamabearephem"
+    nid: "0x0234"
+    nid_hybrid_p256: "0x0334"
+    oqs_alg: "OQS_KEM_alg_threebears_mamabear_ephem"
+    bit_security: 192
+  -
+    name_group: "papabearephem"
+    nid: "0x0235"
+    nid_hybrid_p256: "0x0335"
+    oqs_alg: "OQS_KEM_alg_threebears_papabear_ephem"
+    bit_security: 256
+kem_nid_end: "0x0250"
+kem_nid_hybrid_end: "0x0350"
+unused_kems:
+  -
     name_group: "ntrulpr653"
-    nid: "0x0226"
-    nid_hybrid_p256: "0x0326"
+    nid: "0x0228"
+    nid_hybrid_p256: "0x0328"
     oqs_alg: "OQS_KEM_alg_ntruprime_ntrulpr653"
     bit_security: 128
   -
     name_group: "ntrulpr761"
-    nid: "0x0227"
-    nid_hybrid_p256: "0x0327"
+    nid: "0x0229"
+    nid_hybrid_p256: "0x0329"
     oqs_alg: "OQS_KEM_alg_ntruprime_ntrulpr761"
     bit_security: 192
   -
     name_group: "ntrulpr857"
-    nid: "0x0228"
-    nid_hybrid_p256: "0x0328"
+    nid: "0x022a"
+    nid_hybrid_p256: "0x032a"
     oqs_alg: "OQS_KEM_alg_ntruprime_ntrulpr857"
     bit_security: 192
   -
     name_group: "ntskem1264"
-    nid: "0x0229"
-    nid_hybrid_p256: "0x0329"
+    nid: "0x022b"
+    nid_hybrid_p256: "0x032b"
     oqs_alg: "OQS_KEM_alg_ntskem_12_64"
     bit_security: 128
 sigs:
