--- a/.travis.yml
+++ b/.travis.yml
@@ -205,10 +205,14 @@ script:
           travis_terminate 1;
       fi
     - if test -n "$MARKDOWNLINT" ; then
-          echo -e "====START MARKDOWNLINT====";
-          gem install mdl || travis_terminate 1;
-          mdl -s util/markdownlint.rb . || travis_terminate 1;
-          echo -e "====END MARKDOWNLINT====";
+          if ! gem install mdl ; then
+              echo -e '\052\052 FAILED -- GEM INSTALL MDL';
+              travis_terminate 1;
+          fi;
+          if ! $make md-nits ; then
+              echo -e '\052\052 FAILED -- MAKE MD-NITS';
+              travis_terminate 1;
+          fi;
       fi
     - if ! $make2; then
           echo -e '\052\052 FAILED -- MAKE';
